<resources>
    <string name="app_name">MainApp</string>
    <string name="notes">Notes</string>
    <string name="notes_header">notes_header</string>
    <string name="x">X</string>
    <string name="chords">#-Chords</string>
    <string name="chords1">Chords</string>
    <string name="help">HELP</string>
    <string name="chords2">Chords</string>
    <string name="chords_header">chords_header</string>
    <string name="sharp">#-Chords</string>
    <string name="notes2">Notes</string>
    <string name="x2">X</string>
    <string name="notes3">Notes</string>
    <string name="chords3">#-Chords</string>
    <string name="chords4">Chords</string>
    <string name="chords5">#-chords</string>
    <string name="high_c">High-C</string>
    <string name="low_c">Low C</string>
    <string name="middle_c">Middle C</string>
    <string name="mid_c">mid_c</string>
    <string name="notes_lowc">notes_lowc</string>
    <string name="notes_upperc">notes_upperc</string>
    <string name="piano_chords">piano_chords</string>
    <string name="g_chord">g_chord</string>
    <string name="a_chord">a_chord</string>
    <string name="b_chord">b_chord</string>
    <string name="c_chord">c_chord</string>
    <string name="d_chord">d_chord</string>
    <string name="e_chord">e_chord</string>
    <string name="f_chord">f_chord</string>
    <string name="key_labels">key_labels</string>
    <string name="key_labels2">key_labels</string>
    <string name="gsharp_chord">gsharp_chord</string>
    <string name="asharp_chord">asharp_chord</string>
    <string name="csharp_chord">csharp_chord</string>
    <string name="dsharp_chord">dsharp_chord</string>
    <string name="fsharp_chord">fsharp_chord</string>
</resources>
