<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_notes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mixtape_mam.mainapp.notes">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        android:ems="10"
        android:id="@+id/notes_header"
        android:inputType="none"
        android:textSize="24sp"
        android:contentDescription="@string/notes_header"
        android:layout_marginRight="284dp"
        android:layout_marginEnd="284dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/button4"
        android:onClick="gotoMain"/>

    <Button
        android:text="@string/chords5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:onClick="gotoSharp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button2"
        android:layout_toStartOf="@+id/button2" />

    <Button
        android:text="@string/chords1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:onClick="gotoChords"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/notes_header"
        android:layout_alignStart="@+id/notes_header" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/piano_chords"
        android:id="@+id/imageView"
        android:layout_marginRight="168dp"
        android:layout_marginEnd="168dp"
        android:layout_below="@+id/button4"
        android:layout_toLeftOf="@+id/button4"
        android:layout_toStartOf="@+id/button4"
        android:contentDescription="@string/piano_chords" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/notes_upperc"
        android:layout_marginTop="11dp"
        android:id="@+id/imageView2"
        android:layout_below="@+id/imageView"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:contentDescription="@string/notes_upperc" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/notes_lowc"
        android:id="@+id/imageView4"
        android:layout_above="@+id/button3"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2"
        android:contentDescription="@string/notes_lowc" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/notes_midc"
        android:id="@+id/imageView3"
        android:layout_above="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/mid_c" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/high_c"
        android:ems="10"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_toLeftOf="@+id/imageView2"
        android:layout_toStartOf="@+id/imageView2"
        android:layout_marginBottom="39dp"
        android:id="@+id/highc" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/middle_c"
        android:ems="10"
        android:layout_alignTop="@+id/imageView3"
        android:layout_toLeftOf="@+id/imageView2"
        android:layout_toStartOf="@+id/imageView2"
        android:layout_marginTop="36dp"
        android:id="@+id/midc" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/low_c"
        android:ems="10"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="36dp"
        android:id="@+id/lowc" />
</RelativeLayout>
