<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sharp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mixtape_mam.mainapp.sharp"
    tools:ignore="ExtraText">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chords3"
        android:ems="10"
        android:id="@+id/sharp_header"
        android:inputType="none"
        android:textSize="24sp"
        android:contentDescription="@string/notes_header"
        android:layout_marginRight="331dp"
        android:layout_marginEnd="331dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button10"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="17dp"
        android:onClick="gotoMain"
        />

    <Button
        android:text="@string/chords4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button9"
        android:layout_marginBottom="13dp"
        tools:ignore="RtlHardcoded"
        android:onClick="gotoChords"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/sharp_header"
        android:layout_toStartOf="@+id/sharp_header" />

    <Button
        android:text="@string/notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button8"
        android:onClick="gotoNotes"
        android:layout_alignBaseline="@+id/button9"
        android:layout_alignBottom="@+id/button9"
        android:layout_alignLeft="@+id/sharp_header"
        android:layout_alignStart="@+id/sharp_header" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/asharp_chord"
        android:id="@+id/imageView18"
        android:layout_below="@+id/imageView17"
        android:contentDescription="@string/asharp_chord" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/key_labels"
        android:id="@+id/imageView17"
        android:layout_below="@+id/imageView16"
        android:layout_toLeftOf="@+id/button10"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/key_labels"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/piano_chords"
        android:id="@+id/imageView16"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/sharp_header"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/piano_chords" />
    />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/csharp_chord"
        android:layout_marginTop="11dp"
        android:id="@+id/imageView19"
        android:layout_below="@+id/imageView18"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/csharp_chord" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/dsharp_chord"
        android:layout_marginTop="11dp"
        android:id="@+id/imageView20"
        android:layout_below="@+id/imageView19"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/dsharp_chord" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/fsharp_chord"
        android:layout_marginTop="11dp"
        android:id="@+id/imageView21"
        android:layout_below="@+id/imageView20"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/fsharp_chord" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/g_sharp"
        android:id="@+id/imageView22"
        android:layout_above="@+id/button9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/gsharp_chord" />

</RelativeLayout>
